--- a/DBHandler/packages.config
+++ b/DBHandler/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.6" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.6" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.6" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite.Core" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net461" />
@@ -23,6 +26,8 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.6" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.6" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net462" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.12" targetFramework="net462" />
